* attempt to make the validation better